guard against empty string value
git-svn-id: https://svn.apache.org/repos/asf/incubator/click/trunk@717790 13f79535-47bb-0310-9956-ffa450edef68